--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://abbas:abbas@cluster0.znn9t.mongodb.net/?retryWrites=true
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://hospital-management-system-frontend-siub.onrender.com
 
 DASHBOARD_URL=http://localhost:5174
 
