--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,7 +4,7 @@ MONGO_URI=mongodb+srv://abbas:abbas@cluster0.znn9t.mongodb.net/?retryWrites=true
 
 FRONTEND_URL=https://hospital-management-system-frontend-siub.onrender.com
 
-DASHBOARD_URL=http://localhost:5174
+DASHBOARD_URL=https://hospital-management-system-dashboard-cexl.onrender.com
 
 JWT_SECRET_KEY=asjhdkjahkjdlfhksahfksad
 
