--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,9 +2,9 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://abbas:abbas@cluster0.znn9t.mongodb.net/?retryWrites=true
 
-FRONTEND_URL=https://hospital-management-system-frontend-siub.onrender.com
+FRONTEND_URL=http://localhost:5173
 
-DASHBOARD_URL=https://hospital-management-system-dashboard-cexl.onrender.com
+DASHBOARD_URL=http://localhost:5174
 
 JWT_SECRET_KEY=asjhdkjahkjdlfhksahfksad
 
